# overleaf-local-folder-syncing

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
overleaf/: main.tex
overleaf_syncing/: ConfigurationHandler.py  DropboxOAuthHandler.py  SyncClient.py  api_requests.py  utilities.py
src/: WisdemGUI.py  main.py
src/examples/02_reference_turbines/: IEA-10-198-RWT.yaml  IEA-3p4-130-RWT.yaml
src/examples/08_plant_finance/: example.py
src/examples/09_floating/: tlp_example.py
src/overleaf_syncing/: DropboxOAuthHandler.py  OverleafSyncing.py  Secrets.py  api_requests.py
src/simulations/: gui_export_analysis.yaml  gui_export_geometry.yaml  gui_export_modeling.yaml
src/utilities/: plot_config.py  utilities.py
tests/: test_api_requests.py
