[metadata]
name = OverleafSyncing
description = Syncing local folder with Overleaf
author = Eivind Kolmannskog
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    overleaf_syncing
install_requires =
    certifi>=2024.7.4
    charset-normalizer>=3.3.2
    dropbox>=12.0.2
    idna>=3.7
    ply>=3.11
    python-dotenv>=1.0.1
    PyYAML>=6.0.2
    requests>=2.32.3
    six>=1.16.0
    stone>=3.3.1
    urllib3>=2.2.2
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
overleaf_syncing = py.typed

[flake8]
max-line-length = 160